<resources>
    <string name="app_name">SampleApplication</string>
    <string name="action_settings">Settings</string>
    <string name="vibration_setting">Vibration</string>
    <string name="audio_setting">Sound</string>
    <string name="change_text_color">Change Text Color</string>
    <string name="frequency_title">Frequency of alarms</string>
    <string name="activity_title">Activity duration</string>

    <string name="pref_vibration_key" translatable="false">pref_vibration</string>
    <string name="pref_audio_key" translatable="false">pref_audio</string>

    <string name="pref_frequency_key" translatable="false">pref_frequency</string>
    <string name="pref_frequency_default" translatable="false">60</string>

    <string name="pref_activity_key" translatable="false">pref_activity</string>
    <string name="pref_activity_default" translatable="false">5</string>

</resources>