<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference
        android:defaultValue="true"
        android:key="@string/pref_audio_key"
        android:summaryOff="..."
        android:summaryOn="..."
        android:title="@string/audio_setting"/>

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="@string/pref_vibration_key"
        android:summaryOff="..."
        android:summaryOn="..."
        android:title="@string/vibration_setting"/>

    <EditTextPreference
        android:defaultValue="@string/pref_frequency_default"
        android:key="@string/pref_frequency_key"
        android:title="@string/frequency_title"/>

    <EditTextPreference
        android:defaultValue="@string/pref_activity_default"
        android:key="@string/pref_activity_key"
        android:title="@string/activity_title"/>
</PreferenceScreen>